<resources>
    <string name="app_name">Star Wars Info</string>
    <string name="action_home">Home</string>
    <string name="planets">Planets</string>
    <string name="species">Species</string>
    <string name="people">People</string>
    <string name="setting">Settings</string>
    <string name="loading_error_message_people">"Woops. Can't connect to a galaxy far far away. No people in the galaxy! Check your internet connection."</string>
    <string name="loading_error_message_planet">"Woops. Can't connect to a galaxy far far away. No planets in the galaxy! Check your internet connection."</string>
    <string name="loading_error_message_species">"Woops. Can't connect to a galaxy far far away. No creatures in the galaxy! Check your internet connection."</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>



    <string name="pref_title_display_name">User name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">This is an application to help the user find data related to Star Wars such as the species , people, and plantes in the Star War Movies.</string>

    <string name="app_version"> 0.2.0</string>
    <string name="pref_header_version">Version</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!--  settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- settings for Notifications -->
    <string name="pref_header_notifications">Choose notification sound</string>

    <string name="pref_title_new_message_notifications">Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
