<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <Button
        android:id="@+id/btn_species"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/species"
        android:textSize="22sp"
        android:layout_margin="4dp"/>

        <Button
            android:id="@+id/btn_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/people"
            android:textSize="22sp"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/btn_planet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/planets"
            android:textSize="22sp"
            android:layout_margin="4dp"/>
    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/nv_nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/nav_drawer"/>


</android.support.v4.widget.DrawerLayout>